@@ -97,6 +97,14 @@
  *  defined to a non-zero value instead to give the size in bytes of the control endpoint, to reduce the size of the compiled
  *  binary at the expense of flexibility.
  *
+ *  <b>STATIC_ENDPOINT_CONFIGURATION</b> - Endpoint.h \n
+ *  By default, the endpoint configuration routine is designed to accept dynamic inputs, so that the endpoints can be configured
+ *  using variable values known only at runtime. This allows for a great deal of flexibility, however uses a small amount of binary
+ *  space which may be wasted if all endpoint configurations are static and known at compile time. Define this token via the -D switch
+ *  to optimize the endpoint configuration routine for constant inputs, to reduce the size of the compiled binary at the expense of
+ *  flexibility. Note that with this option dynamic values may still be used, but will result in many times more code to be generated than
+ *  if the option was disabled.
+ *
  *  <b>USE_SINGLE_DEVICE_CONFIGURATION</b> - DevChapter9.h \n
  *  By default, the library determines the number of configurations a USB device supports by reading the device descriptor. This reduces
  *  the amount of configuration required to set up the library, and allows the value to change dynamically (if descriptors are stored in
